--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Java
+# Java (백엔드)
 *.class
 *.jar
 *.war
@@ -7,7 +7,7 @@ target/
 !target/*.jar
 !target/*.war
 
-# Maven
+# Maven (백엔드)
 .mvn/
 mvnw
 mvnw.cmd
@@ -27,7 +27,7 @@ Thumbs.db
 *.log
 logs/
 
-# Environment variables
+# Environment variables (민감한 정보)
 .env
 .env.local
 .env.production
@@ -64,10 +64,44 @@ uploads/
 videos/
 thumbnails/
 
-# Spring Boot config
-application*.yml
-application*.properties
-
 # SSL / Keystore
 *.keystore
 *.jks
+
+# Spring Boot specific
+.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+# STS
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+# IntelliJ IDEA
+*.iws
+*.ipr
+
+# NetBeans
+/nbproject/private/
+/nbbuild/
+/nbdist/
+/.nb-gradle/
+
+# 프로젝트별 설정 파일들
+tft-share-backend/tft-share/.project
+tft-share-backend/tft-share/.classpath
+tft-share-backend/tft-share/.factorypath
+tft-share-backend/tft-share/.settings/
+tft-share-backend/tft-share/.mvn/
+
+# 프론트엔드 빌드 결과물
+tft-share-frontend/dist/
+tft-share-frontend/build/
+
+# 백엔드 빌드 결과물
+tft-share-backend/tft-share/target/
