--- a/tft-share-backend/tft-share/.gitignore
+++ b/tft-share-backend/tft-share/.gitignore
@@ -1,10 +1,83 @@
-HELP.md
+# Java
+*.class
+*.jar
+*.war
+*.ear
 target/
+!target/*.jar
+!target/*.war
+
+# Maven
+.mvn/
+mvnw
+mvnw.cmd
+
+# IDE
+.idea/
+*.iml
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.development
+
+# Node.js (프론트엔드)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+build/
+dist/
+
+# Temporary files
+*.tmp
+*.temp
+
+# Database
+*.db
+*.sqlite
+
+# AWS
+.aws/
+credentials
+
+# JWT secrets
+jwt-secret.txt
+secret.key
+
+# Application specific
+uploads/
+videos/
+thumbnails/
+
+# Spring Boot config
+application*.yml
+application*.properties
+
+# SSL / Keystore
+*.keystore
+*.jks
+
+# Spring Boot specific
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### STS ###
+# STS
 .apt_generated
 .classpath
 .factorypath
@@ -13,21 +86,12 @@ target/
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
-.idea
+# IntelliJ IDEA
 *.iws
-*.iml
 *.ipr
 
-### NetBeans ###
+# NetBeans
 /nbproject/private/
 /nbbuild/
-/dist/
 /nbdist/
 /.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
