--- a/tft-share-backend/tft-share/pom.xml
+++ b/tft-share-backend/tft-share/pom.xml
@@ -118,6 +118,11 @@
 	        <artifactId>s3</artifactId>
 	        <version>2.22.0</version> <!-- 최신 버전 확인 -->
 	    </dependency>
+		<dependency>
+		    <groupId>io.github.cdimascio</groupId>
+		    <artifactId>dotenv-java</artifactId>
+		    <version>3.2.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
