--- a/tft-share-backend/tft-share/src/main/resources/application.yml
+++ b/tft-share-backend/tft-share/src/main/resources/application.yml
@@ -6,10 +6,8 @@ server:
   # address: 0.0.0.0
 
 spring:
-  config:
-    import: optional:file:.env[.properties]
   profiles:
-    active: dev  # 기본값은 개발 환경
+    active: ${ENVIRONMENT:dev}  # 기본값은 개발 환경
 
   application:
     name: tft-share
@@ -21,10 +19,6 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
-            # 로컬 개발용
-            redirect-uri: http://localhost:8080/api/oauth2/callback
-            # 배포용
-            # redirect-uri: http://tftshare.com:8080/api/oauth2/callback
             scope:
               - openid
               - email
@@ -37,23 +31,11 @@ spring:
             user-info-uri: https://openidconnect.googleapis.com/v1/userinfo
 
   datasource:
-    # 로컬 개발용 MySQL
-    url: jdbc:mysql://localhost:3306/tft_share?useSSL=false&requireSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-    # 배포용 RDS
-    # url: jdbc:mysql://tft-share-db.cvoms202yzka.ap-northeast-2.rds.amazonaws.com:3306/tft_share_db?useSSL=false&requireSSL=false&serverTimezone=Asia/Seoul
-    # username: ${DB_USERNAME}
-    # password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
-    hibernate:
-      # 로컬 개발용 (테이블 재생성)
-      ddl-auto: create-drop
-      # 배포용 (테이블 업데이트)
-      # ddl-auto: update
-    show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
@@ -66,24 +48,6 @@ spring:
 # 공통 설정 (환경에 관계없이 동일한 설정)
 jwt:
   secret: ${JWT_SECRET}
-
-# 로컬 개발용 (AWS 기능 비활성화)
-# aws:
-#   credentials:
-#     access-key: ${AWS_ACCESS_KEY}
-#     secret-key: ${AWS_SECRET_KEY}
-#   s3:
-#     bucket-name: tft-share-bucket
-#     region: ap-northeast-2
-
-# 배포용 AWS 설정
-aws:
-  credentials:
-    access-key: ${AWS_ACCESS_KEY}
-    secret-key: ${AWS_SECRET_KEY}
-  s3:
-    bucket-name: tft-share-bucket
-    region: ap-northeast-2
 
 riot:
   api:
