fix: db ssl 사용 false로 수정

--- a/tft-share-backend/tft-share/src/main/resources/application-prod.yml
+++ b/tft-share-backend/tft-share/src/main/resources/application-prod.yml
@@ -11,7 +11,7 @@ spring:
             redirect-uri: http://tftshare.com:8080/api/oauth2/callback
 
   datasource:
-    url: jdbc:mysql://tft-share-db.cvoms202yzka.ap-northeast-2.rds.amazonaws.com:3306/tft_share_db?useSSL=true&requireSSL=true&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=utf8&useUnicode=true
+    url: jdbc:mysql://tft-share-db.cvoms202yzka.ap-northeast-2.rds.amazonaws.com:3306/tft_share_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=utf8&useUnicode=true
 
   jpa:
     hibernate:
