--- a/tft-share-backend/tft-share/src/main/resources/application-dev.yml
+++ b/tft-share-backend/tft-share/src/main/resources/application-dev.yml
@@ -11,7 +11,7 @@ spring:
             redirect-uri: http://localhost:8080/api/oauth2/callback
 
   datasource:
-    url: jdbc:mysql://localhost:3306/tft_share?useSSL=false&requireSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
+    url: jdbc:mysql://localhost:3306/tft_share?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
 
   jpa:
     hibernate:
